--- a/chi2012.tex
+++ b/chi2012.tex
@@ -390,18 +390,16 @@ We first describe our methodology, starting with the three hypotheses we set out
 \end{description}
 
 \subsubsection{Study and task design}
-To test these hypotheses, we designed a within-subjects lab-based A-B study in which participants were asked to perform two predefined tasks in separate timed trials, once with the DP interface (``condition A'') and once with a baseline interface (``condition B'') as a control condition.  We used upon the within-subjects A-B format in order to make both quantitative measurements about an individual's performance with DP (relative to baseline), but also to make qualitative observations of the processes used by each participant as they solved each task.   Conditions and interface order were fully counterbalanced among participants to eliminate ordering and task bias.  
+To test these hypotheses, we designed a within-subjects (repeated measures) lab-based A-B study in which participants were asked to perform predefined subjective-choice tasks in two separate timed trials, once with the DP interface (``condition A'') and once with a baseline interface (``condition B'').  Each task was paired with one of two datasets, chosen depending on condition, which were fully counterbalanced in a Latin square design to eliminate potential ordering, task, and dataset biases.  
 
-In the control conditions, participants were given a web browser with tabs open to all of the data sources they were provided for use, as well as a spreadsheet containing the data taken from web sites pertaining to the candidates they were asked to choose from. Participants were told they were free to use the web sites and spreadsheets however they wished. Each task was paired with one of two datasets, depending on condition, so that we could evaluate whether the participant's performance of completing a task differed with different datasets. 
+The participants were seated at a standard Macintosh desktop equipped with a 22-inch monitor with a standard keyboard and mouse. Each participant was given a maximum of 10 minutes to each of two tasks, but were told that if they finished earlier they could tell us and move on to the next condition.  Prior to A conditions, participants were trained on how to use DP using a five-minute instructional video.
+
+In the control conditions, participants were given a web browser with tabs open to all of the data sources they were provided for use, as well as a spreadsheet containing the data taken from web sites pertaining to the candidates they were asked to choose from. Participants were told they were free to use the web sites and spreadsheets however they wished. 
 
 % why? why were these tasks selected? can we drop in the phrase ``multi-dimensional subjective choice task'' and refer back to PS.1 to justify the choice of tasks?
 We based our two tasks on choosing a university and picking a restaurant for a large social event, because in PS.1 the majority of people stated that they had used multiple websites for these tasks.  We used different two different variables for both tasks, where the restaurant was located (Glasgow and Cambridge) and which subject people chose (sport science and history).  For the restaurant task, the cities Glasgow and Cambridge were chosen because they were geographically distant to participants, and would therefore minimise likelihood of prior familiarity with the restaurants or location.  For the University selection task, two university courses were selected at random from the complete university guide\footnote{The Complete University Guide:\\\url{www.thecompleteuniversityguide.co.uk}}, and the six top-ranked universities for each subject were selected as candidates.  
 % \subsubsection{Task preparation} In order to prepare the data for our tasks, we identified websites that people commonly used for selecting universities and restaurants (see Table \ref{tab:studyfactors}).  Once we had compiled the list of websites, we select the top most used six for each task. 
 We selected six because it enables us to scope our study, we found through two pilot studies that six data sources provided a sufficient challenge for users to explore the data and required them to use DP's main features. We manually collected the key data points from the websites for use in DP and into Excel spreadsheets (which 40\% of the participants in PS.1 said that had previously used to compare data).
-
-The participants were given a standard desktop PC running MacOS X on a 22-inch monitor with a standard keyboard and mouse. Each participant was asked to complete two tasks, one A and one B condition.  Each participant was given a maximum of 10 minutes to complete a task, but were told that if they finished earlier they could tell us and move on to the next condition.  In order to select which tasks the participant was given, we used a Latin square to permutate the tasks and conditions.  In order to train the user on how to use our interface, they viewed a five-minute DataPalette tutorial video introducing its basic functionality, how to use histograms and maps, and linking instances.
-
-
 
 \begin{table}[htbp]
 \begin{center}
