--- a/chi2012.tex
+++ b/chi2012.tex
@@ -301,7 +301,7 @@ The two pre-studies provided valuable insight towards this goal that allowed us 
 \subsection{Design Process}
 We followed a five-phase spiral model consisting of planning, designing, mocking-up, prototyping, and testing to derive the design of DataPalette.  This process was used because of the high degree of initial uncertainty associated with the mechanisms for facilitating the various aspects of effective data mixing that we describe in the next section. We approached this design challenge through alternative generation and elimination; alternatives were designed, drawn up and evaluated by expert colleagues (and in later iterations, non-expert potential users), who provided critiques of the alternatives. The ease with which designs could be prototyped in HTML5 with modern web frameworks allowed us to perform this develop-test-iterate rapidly through seven iterations of this process.
 
-In order to feel familiar to new users, we borrowed the overall  ``look and feel'' from MacOS Finder-style file managers.  In the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can freely drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. Unlike file managers, however, the basic unit of data was not a file, but an \emph{instance} - corresponding to a single data record, JSON object, RDF instance, or any small bit of structured data. In order to make working with relational graphs manageable, an early decision we made was to break up RDF-like relational data into discrete instances with properties. This was done at time of import, and could be done for every major Web data feed type (e.g., JSON, XML, RDF) without any loss of generality.
+In order to feel familiar to new users, we borrowed the overall  ``look and feel'' from MacOS Finder-style file managers.  In the DataPalette workspace, shown in Figure \ref{fig:workspace}, the user can freely drag and drop entities from data sources (on the left) into windows that they create, resize, arrange and label. Unlike file managers, however, the basic unit of data was not a file, but an \emph{instance} - corresponding to a single data record, JSON object, RDF instance, or any small bit of structured data. In order to make working with relational graphs manageable, we decided to break up RDF-like relational data into discrete instances with properties. Such chunking was implemented in a generic manner to work with all major Web data feed types (e.g., JSON, XML, RDF).
 
 \subsubsection{Multi-path selection: link-sliding for heterogeneous sets}
 
